Actualizar landing con embed de Spotify

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 
     iframe {
       width: 100%;
-      aspect-ratio: 16 / 9;
       border: 0;
       border-radius: 14px;
       background: #000;
@@ -45,11 +44,14 @@
   <main class="wrap">
     <img class="logo" src="./portento-logo.png" alt="Logo Portento" />
     <iframe
-      src="https://www.youtube.com/embed/ktjeEKt8N1Q?rel=0"
-      title="Portento video"
+      style="border-radius:12px"
+      src="https://open.spotify.com/embed/artist/0p0NNmXeyiUoxsalvITKgc?utm_source=generator"
+      width="100%"
+      height="352"
+      title="Portento Spotify"
       loading="lazy"
-      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-      allowfullscreen>
+      allowfullscreen
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
     </iframe>
   </main>
 </body>
