--- a/index.html
+++ b/index.html
@@ -32,9 +32,17 @@
       background: #fff;
     }
 
-    iframe {
+    .video-frame {
       width: 100%;
       aspect-ratio: 16 / 9;
+      border: 0;
+      border-radius: 14px;
+      background: #000;
+    }
+
+    .spotify-frame {
+      width: 100%;
+      height: 352px;
       border: 0;
       border-radius: 14px;
       background: #000;
@@ -54,11 +62,19 @@
   <main class="wrap">
     <img class="logo" src="./portento-logo.png" alt="Logo Portento" />
     <iframe
+      class="video-frame"
       src="https://www.youtube.com/embed/ktjeEKt8N1Q?rel=0"
       title="Portento Video"
       loading="lazy"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
       allowfullscreen>
+    </iframe>
+    <iframe
+      class="spotify-frame"
+      src="https://open.spotify.com/embed/artist/0p0NNmXeyiUoxsalvITKgc?utm_source=generator"
+      title="Portento Spotify"
+      loading="lazy"
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
     </iframe>
     <a class="ig-link" href="https://www.instagram.com/portentorecords/" target="_blank" rel="noopener noreferrer">
       Instagram: @portentorecords
