Centrar bloque de Instagram y mostrar @portentorecords

--- a/index.html
+++ b/index.html
@@ -48,9 +48,17 @@
       background: #000;
     }
 
+    .social {
+      margin-top: 8px;
+      display: grid;
+      justify-items: center;
+      gap: 8px;
+      width: 100%;
+    }
+
     .ig-link {
       display: block;
-      width: min(760px, 100%);
+      width: min(360px, 100%);
       text-decoration: none;
       transition: transform 0.2s ease;
     }
@@ -64,6 +72,13 @@
       height: auto;
       display: block;
       border-radius: 12px;
+    }
+
+    .ig-handle {
+      color: #fff;
+      font-size: 18px;
+      font-weight: 700;
+      letter-spacing: 0.01em;
     }
   </style>
 </head>
@@ -85,9 +100,12 @@
       loading="lazy"
       allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
     </iframe>
-    <a class="ig-link" href="https://www.instagram.com/portentorecords/" target="_blank" rel="noopener noreferrer" aria-label="Instagram Portento Records">
-      <img class="ig-badge" src="./instagram-logo.svg" alt="Instagram Portento Records" />
-    </a>
+    <section class="social" aria-label="Instagram de Portento">
+      <a class="ig-link" href="https://www.instagram.com/portentorecords/" target="_blank" rel="noopener noreferrer" aria-label="Instagram Portento Records">
+        <img class="ig-badge" src="./instagram-logo.svg" alt="Instagram Portento Records" />
+      </a>
+      <p class="ig-handle">@portentorecords</p>
+    </section>
   </main>
 </body>
 </html>
