Agregar seccion de musica incidental con enlace a obra

--- a/index.html
+++ b/index.html
@@ -80,6 +80,36 @@
       font-weight: 700;
       letter-spacing: 0.01em;
     }
+
+    .incidental {
+      width: 100%;
+      border: 1px solid rgba(255, 255, 255, 0.22);
+      border-radius: 14px;
+      padding: 14px;
+      color: #fff;
+      text-align: center;
+      background: rgba(255, 255, 255, 0.03);
+    }
+
+    .incidental h2 {
+      font-size: 20px;
+      margin-bottom: 6px;
+    }
+
+    .incidental p {
+      color: rgba(255, 255, 255, 0.82);
+      margin-bottom: 10px;
+    }
+
+    .incidental a {
+      display: inline-block;
+      color: #fff;
+      text-decoration: none;
+      border: 1px solid rgba(255, 255, 255, 0.28);
+      border-radius: 999px;
+      padding: 10px 14px;
+      font-weight: 600;
+    }
   </style>
 </head>
 <body>
@@ -100,6 +130,11 @@
       loading="lazy"
       allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
     </iframe>
+    <section class="incidental" aria-label="Musica incidental">
+      <h2>Musica incidental</h2>
+      <p>Escucha la musica incidental de esta obra.</p>
+      <a href="https://a.co/d/0cAcmmZw" target="_blank" rel="noopener noreferrer">Abrir obra</a>
+    </section>
     <section class="social" aria-label="Instagram de Portento">
       <a class="ig-link" href="https://www.instagram.com/portentorecords/" target="_blank" rel="noopener noreferrer" aria-label="Instagram Portento Records">
         <img class="ig-badge" src="./instagram-logo.svg" alt="Instagram Portento Records" />
