Actualizar home y /poder con portada y detalles de Al Filo del Poder

--- a/index.html
+++ b/index.html
@@ -5,19 +5,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Portento CDMX</title>
   <style>
+    :root {
+      --bg: #05060d;
+      --ink: #ffffff;
+      --muted: rgba(255, 255, 255, 0.82);
+      --olive: #9a990f;
+      --gold: #d5ba46;
+      --line: rgba(255, 255, 255, 0.22);
+    }
+
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
       min-height: 100vh;
       display: grid;
       place-items: center;
-      background: #05060d;
+      background: radial-gradient(circle at 50% -20%, #20251a 0%, var(--bg) 55%);
       padding: 20px;
       font-family: system-ui, sans-serif;
+      color: var(--ink);
     }
 
     .wrap {
-      width: min(900px, 100%);
+      width: min(920px, 100%);
       display: grid;
       gap: 18px;
       justify-items: center;
@@ -28,7 +38,7 @@
       height: auto;
       display: block;
       border-radius: 999px;
-      border: 1px solid rgba(255, 255, 255, 0.22);
+      border: 1px solid var(--line);
       background: #fff;
     }
 
@@ -48,6 +58,53 @@
       background: #000;
     }
 
+    .book {
+      width: 100%;
+      border: 1px solid var(--line);
+      border-radius: 16px;
+      padding: 16px;
+      text-align: center;
+      background: linear-gradient(155deg, rgba(154, 153, 15, 0.2), rgba(0, 0, 0, 0.35));
+      display: grid;
+      gap: 10px;
+      justify-items: center;
+    }
+
+    .book h2 {
+      font-size: 24px;
+      letter-spacing: 0.01em;
+    }
+
+    .book p {
+      color: var(--muted);
+    }
+
+    .book-cover {
+      width: min(320px, 100%);
+      border-radius: 10px;
+      border: 2px solid rgba(213, 186, 70, 0.6);
+      box-shadow: 0 16px 34px rgba(0, 0, 0, 0.45);
+      display: block;
+      margin: 0 auto;
+    }
+
+    .book-cta {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      min-width: 260px;
+      color: #05060d;
+      text-decoration: none;
+      border-radius: 999px;
+      padding: 12px 18px;
+      font-weight: 800;
+      background: linear-gradient(130deg, var(--gold), #f2e071 50%, #9a990f);
+      box-shadow: 0 10px 24px rgba(0, 0, 0, 0.35);
+      transition: transform 0.2s ease;
+    }
+
+    .book-cta:hover { transform: translateY(-2px); }
+
     .social {
       margin-top: 8px;
       display: grid;
@@ -63,9 +120,7 @@
       transition: transform 0.2s ease;
     }
 
-    .ig-link:hover {
-      transform: translateY(-2px);
-    }
+    .ig-link:hover { transform: translateY(-2px); }
 
     .ig-badge {
       width: 100%;
@@ -80,52 +135,12 @@
       font-weight: 700;
       letter-spacing: 0.01em;
     }
-
-    .incidental {
-      width: 100%;
-      border: 1px solid rgba(255, 255, 255, 0.22);
-      border-radius: 14px;
-      padding: 14px;
-      color: #fff;
-      text-align: center;
-      background: rgba(255, 255, 255, 0.03);
-    }
-
-    .incidental h2 {
-      font-size: 20px;
-      margin-bottom: 6px;
-    }
-
-    .incidental p {
-      color: rgba(255, 255, 255, 0.82);
-      margin-bottom: 10px;
-    }
-
-    .incidental a {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      min-width: 240px;
-      color: #05060d;
-      text-decoration: none;
-      border: 1px solid transparent;
-      border-radius: 999px;
-      padding: 12px 18px;
-      font-weight: 700;
-      background: linear-gradient(135deg, #feda75, #fa7e1e 40%, #d62976);
-      box-shadow: 0 8px 24px rgba(214, 41, 118, 0.35);
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    .incidental a:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 12px 28px rgba(214, 41, 118, 0.42);
-    }
   </style>
 </head>
 <body>
   <main class="wrap">
     <img class="logo" src="./portento-logo.png" alt="Logo Portento" />
+
     <iframe
       class="video-frame"
       src="https://www.youtube.com/embed/ktjeEKt8N1Q?rel=0"
@@ -134,6 +149,7 @@
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
       allowfullscreen>
     </iframe>
+
     <iframe
       class="spotify-frame"
       src="https://open.spotify.com/embed/artist/0p0NNmXeyiUoxsalvITKgc?utm_source=generator"
@@ -141,11 +157,16 @@
       loading="lazy"
       allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
     </iframe>
-    <section class="incidental" aria-label="Musica incidental">
-      <h2>Musica incidental</h2>
-      <p>Escucha la musica incidental de esta obra y revisa los detalles completos.</p>
-      <a href="/poder/">Ver detalles de la obra</a>
+
+    <section class="book" aria-label="Al Filo del Poder">
+      <h2>Al Filo del Poder</h2>
+      <p>Musica incidental original de la obra.</p>
+      <a href="https://a.co/d/0cAcmmZw" target="_blank" rel="noopener noreferrer" aria-label="Ver Al Filo del Poder en Amazon">
+        <img class="book-cover" src="./portada%20al%20filo%20del%20poder.jpg" alt="Portada del ebook Al Filo del Poder" />
+      </a>
+      <a class="book-cta" href="/poder/">Entrar a detalles de la obra</a>
     </section>
+
     <section class="social" aria-label="Instagram de Portento">
       <a class="ig-link" href="https://www.instagram.com/portentorecords/" target="_blank" rel="noopener noreferrer" aria-label="Instagram Portento Records">
         <img class="ig-badge" src="./instagram-logo.svg" alt="Instagram Portento Records" />
