--- a/poder/index.html
+++ b/poder/index.html
@@ -3,79 +3,99 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Portento | Poder</title>
+  <title>Al Filo del Poder | Portento</title>
   <style>
+    :root {
+      --bg: #0a0b0d;
+      --panel: #12130f;
+      --ink: #ffffff;
+      --muted: rgba(255, 255, 255, 0.78);
+      --olive: #8f8e10;
+      --gold: #d4b743;
+      --line: rgba(212, 183, 67, 0.4);
+    }
+
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
       min-height: 100vh;
-      background: #05060d;
-      color: #fff;
+      background:
+        radial-gradient(circle at 10% 0%, rgba(143, 142, 16, 0.22), transparent 38%),
+        radial-gradient(circle at 100% 100%, rgba(212, 183, 67, 0.2), transparent 32%),
+        var(--bg);
+      color: var(--ink);
       font-family: system-ui, sans-serif;
       padding: 24px;
     }
 
     .wrap {
-      width: min(920px, 100%);
+      width: min(1040px, 100%);
       margin: 0 auto;
       display: grid;
-      gap: 16px;
+      gap: 18px;
     }
 
     .back {
-      display: inline-block;
-      color: #fff;
-      text-decoration: none;
-      border: 1px solid rgba(255, 255, 255, 0.3);
-      border-radius: 999px;
-      padding: 9px 14px;
+      display: inline-flex;
       width: fit-content;
+      text-decoration: none;
+      color: #fff;
+      border: 1px solid rgba(255, 255, 255, 0.28);
+      border-radius: 999px;
+      padding: 10px 14px;
+      font-weight: 600;
     }
 
-    .card {
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      border-radius: 16px;
-      padding: 18px;
-      background: rgba(255, 255, 255, 0.04);
+    .hero {
+      border: 1px solid var(--line);
+      border-radius: 20px;
+      padding: 20px;
+      background: linear-gradient(145deg, rgba(143, 142, 16, 0.14), rgba(0, 0, 0, 0.28));
+      display: grid;
+      grid-template-columns: 0.92fr 1.08fr;
+      gap: 18px;
+      align-items: center;
+    }
+
+    .cover {
+      width: 100%;
+      border-radius: 14px;
+      border: 2px solid rgba(212, 183, 67, 0.75);
+      box-shadow: 0 20px 36px rgba(0, 0, 0, 0.52);
+      display: block;
+    }
+
+    .eyebrow {
+      display: inline-block;
+      font-size: 11px;
+      text-transform: uppercase;
+      letter-spacing: 0.08em;
+      font-weight: 700;
+      color: #0a0b0d;
+      background: linear-gradient(130deg, var(--gold), #efe07a);
+      border-radius: 999px;
+      padding: 6px 10px;
+      margin-bottom: 10px;
     }
 
     h1 {
-      font-size: clamp(28px, 5vw, 46px);
-      margin-bottom: 8px;
+      font-size: clamp(34px, 6vw, 56px);
+      line-height: 0.97;
+      margin-bottom: 10px;
+      text-wrap: balance;
     }
 
     .lead {
-      color: rgba(255, 255, 255, 0.85);
-      margin-bottom: 12px;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
-      gap: 10px;
-    }
-
-    .item {
-      border: 1px solid rgba(255, 255, 255, 0.16);
-      border-radius: 12px;
-      padding: 12px;
-      background: rgba(0, 0, 0, 0.2);
-    }
-
-    .item b {
-      display: block;
-      margin-bottom: 4px;
-      color: #feda75;
-      text-transform: uppercase;
-      font-size: 12px;
-      letter-spacing: 0.06em;
+      color: var(--muted);
+      margin-bottom: 14px;
+      max-width: 54ch;
     }
 
     .actions {
       display: flex;
       flex-wrap: wrap;
       gap: 10px;
-      margin-top: 6px;
+      margin-bottom: 10px;
     }
 
     .btn {
@@ -83,18 +103,72 @@
       align-items: center;
       justify-content: center;
       text-decoration: none;
-      color: #05060d;
       border-radius: 999px;
       padding: 11px 16px;
-      font-weight: 700;
-      background: linear-gradient(135deg, #feda75, #fa7e1e 40%, #d62976);
-      border: 1px solid transparent;
+      font-weight: 800;
+      transition: transform 0.2s ease;
+    }
+
+    .btn:hover { transform: translateY(-2px); }
+
+    .btn.primary {
+      color: #0a0b0d;
+      background: linear-gradient(130deg, var(--gold), #efe07a 52%, var(--olive));
     }
 
     .btn.secondary {
       color: #fff;
+      border: 1px solid rgba(255, 255, 255, 0.32);
       background: transparent;
-      border-color: rgba(255, 255, 255, 0.3);
+    }
+
+    .details {
+      border: 1px solid rgba(255, 255, 255, 0.16);
+      border-radius: 16px;
+      background: rgba(0, 0, 0, 0.26);
+      padding: 16px;
+      display: grid;
+      gap: 10px;
+    }
+
+    .details h2 {
+      font-size: 24px;
+      margin-bottom: 2px;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 10px;
+    }
+
+    .item {
+      border: 1px solid rgba(212, 183, 67, 0.28);
+      border-radius: 12px;
+      padding: 11px;
+      background: rgba(255, 255, 255, 0.03);
+    }
+
+    .item b {
+      display: block;
+      font-size: 11px;
+      text-transform: uppercase;
+      letter-spacing: 0.07em;
+      color: var(--gold);
+      margin-bottom: 5px;
+    }
+
+    .item span {
+      color: #fff;
+    }
+
+    .synopsis {
+      color: var(--muted);
+      line-height: 1.6;
+    }
+
+    @media (max-width: 900px) {
+      .hero { grid-template-columns: 1fr; }
     }
   </style>
 </head>
@@ -102,33 +176,44 @@
   <main class="wrap">
     <a class="back" href="/">Volver al home</a>
 
-    <section class="card">
-      <h1>Poder</h1>
-      <p class="lead">Seccion dedicada a la musica incidental de la obra, con referencias principales y acceso directo.</p>
+    <section class="hero">
+      <a href="https://a.co/d/0cAcmmZw" target="_blank" rel="noopener noreferrer" aria-label="Abrir Al Filo del Poder en Amazon">
+        <img class="cover" src="../portada%20al%20filo%20del%20poder.jpg" alt="Portada Al Filo del Poder" />
+      </a>
 
-      <div class="grid">
-        <article class="item">
-          <b>Proyecto</b>
-          <span>Portento</span>
-        </article>
-        <article class="item">
-          <b>Tipo</b>
-          <span>Musica incidental</span>
-        </article>
-        <article class="item">
-          <b>Enlace de obra</b>
-          <span>Amazon short link oficial compartido</span>
-        </article>
-      </div>
-    </section>
+      <article>
+        <span class="eyebrow">Obra destacada</span>
+        <h1>Al Filo del Poder</h1>
+        <p class="lead">Espacio de referencia para la obra y su universo sonoro dentro de Portento.</p>
 
-    <section class="card">
-      <h2 style="margin-bottom:8px;">Acceso</h2>
-      <p class="lead">Abre la obra, escucha la referencia y comparte el material de Portento.</p>
-      <div class="actions">
-        <a class="btn" href="https://a.co/d/0cAcmmZw" target="_blank" rel="noopener noreferrer">Abrir obra</a>
-        <a class="btn secondary" href="https://www.instagram.com/portentorecords/" target="_blank" rel="noopener noreferrer">Instagram @portentorecords</a>
-      </div>
+        <div class="actions">
+          <a class="btn primary" href="https://a.co/d/0cAcmmZw" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
+          <a class="btn secondary" href="https://www.instagram.com/portentorecords/" target="_blank" rel="noopener noreferrer">Instagram</a>
+        </div>
+
+        <section class="details">
+          <h2>Detalles de la obra</h2>
+          <div class="grid">
+            <article class="item">
+              <b>Titulo</b>
+              <span>Al Filo del Poder</span>
+            </article>
+            <article class="item">
+              <b>Autor</b>
+              <span>Angelo Gordillo</span>
+            </article>
+            <article class="item">
+              <b>Proyecto</b>
+              <span>Portento</span>
+            </article>
+            <article class="item">
+              <b>Acceso</b>
+              <span>Amazon (enlace oficial)</span>
+            </article>
+          </div>
+          <p class="synopsis">Narrativa de tension, poder y decisiones de alto costo. Esta pagina concentra la identidad visual de la obra y su acceso directo para escucha, referencia y difusion.</p>
+        </section>
+      </article>
     </section>
   </main>
 </body>
