Actualizar textos de /poder para Al Filo del Poder

--- a/poder/index.html
+++ b/poder/index.html
@@ -182,9 +182,9 @@
       </a>
 
       <article>
-        <span class="eyebrow">Obra destacada</span>
+        <span class="eyebrow">Musica incidental</span>
         <h1>Al Filo del Poder</h1>
-        <p class="lead">Espacio de referencia para la obra y su universo sonoro dentro de Portento.</p>
+        <p class="lead">ebook de espionaje contemporaneo y acción</p>
 
         <div class="actions">
           <a class="btn primary" href="https://a.co/d/0cAcmmZw" target="_blank" rel="noopener noreferrer">Ver en Amazon</a>
@@ -211,7 +211,7 @@
               <span>Amazon (enlace oficial)</span>
             </article>
           </div>
-          <p class="synopsis">Narrativa de tension, poder y decisiones de alto costo. Esta pagina concentra la identidad visual de la obra y su acceso directo para escucha, referencia y difusion.</p>
+          <p class="synopsis">Una historia de intriga, poder y relaciones personales ambientada en el mundo contemporáneo de la diplomacia y la inteligencia. Esta novela combina tensión política, crítica social y emociones humanas con una prosa ágil y envolvente. Ideal para lectores que disfrutan de las tramas actuales, con profundidad cultural y giros estratégicos inesperados.</p>
         </section>
       </article>
     </section>
