--- a/poder/index.html
+++ b/poder/index.html
@@ -92,39 +92,14 @@
     }
 
     .actions {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 12px;
       margin-bottom: 10px;
-      align-items: center;
-    }
-
-    .btn {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      text-decoration: none;
-      border-radius: 999px;
-      padding: 11px 16px;
-      font-weight: 800;
-      transition: transform 0.2s ease;
-    }
-
-    .btn:hover { transform: translateY(-2px); }
-
-    .btn.primary {
-      color: #0a0b0d;
-      background: linear-gradient(130deg, var(--gold), #efe07a 52%, var(--olive));
-    }
-
-    .btn.secondary {
-      color: #fff;
-      border: 1px solid rgba(255, 255, 255, 0.32);
-      background: transparent;
     }
 
     .spotify-album {
-      width: min(100%, 420px);
+      width: 100%;
       height: 352px;
       border: 0;
       border-radius: 12px;
@@ -145,32 +120,6 @@
       margin-bottom: 2px;
     }
 
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 10px;
-    }
-
-    .item {
-      border: 1px solid rgba(212, 183, 67, 0.28);
-      border-radius: 12px;
-      padding: 11px;
-      background: rgba(255, 255, 255, 0.03);
-    }
-
-    .item b {
-      display: block;
-      font-size: 11px;
-      text-transform: uppercase;
-      letter-spacing: 0.07em;
-      color: var(--gold);
-      margin-bottom: 5px;
-    }
-
-    .item span {
-      color: #fff;
-    }
-
     .synopsis {
       color: var(--muted);
       line-height: 1.6;
@@ -178,6 +127,7 @@
 
     @media (max-width: 900px) {
       .hero { grid-template-columns: 1fr; }
+      .actions { grid-template-columns: 1fr; }
     }
   </style>
 </head>
@@ -206,7 +156,7 @@
           </iframe>
           <iframe
             class="spotify-album"
-            src="https://open.spotify.com/embed/album/6kH82YjJ7EnP4Kh4cuAwqq?utm_source=generator"
+            src="https://open.spotify.com/embed/album/2kjGsHTdpNMhaVkiLyH7MW?utm_source=generator"
             title="Spotify album autor"
             loading="lazy"
             allowfullscreen
@@ -215,25 +165,7 @@
         </div>
 
         <section class="details">
-          <h2>Detalles de la obra</h2>
-          <div class="grid">
-            <article class="item">
-              <b>Titulo</b>
-              <span>Al Filo del Poder</span>
-            </article>
-            <article class="item">
-              <b>Autor</b>
-              <span>Angelo Gordillo</span>
-            </article>
-            <article class="item">
-              <b>Proyecto</b>
-              <span>Portento</span>
-            </article>
-            <article class="item">
-              <b>Acceso</b>
-              <span>Amazon (enlace oficial)</span>
-            </article>
-          </div>
+          <h2>Sinopsis</h2>
           <p class="synopsis">Una historia de intriga, poder y relaciones personales ambientada en el mundo contemporáneo de la diplomacia y la inteligencia. Esta novela combina tensión política, crítica social y emociones humanas con una prosa ágil y envolvente. Ideal para lectores que disfrutan de las tramas actuales, con profundidad cultural y giros estratégicos inesperados.</p>
         </section>
       </article>
