--- a/poder/index.html
+++ b/poder/index.html
@@ -162,6 +162,8 @@
             allowfullscreen
             allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
           </iframe>
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3Vg28hxk9Blnv5mt1GocQO?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+          <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0f5GHTjRaz2RCzdnq9bkd0?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
 
         <section class="details">
