Actualizar CTA home a Ver musica incidental

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <a href="https://a.co/d/0cAcmmZw" target="_blank" rel="noopener noreferrer" aria-label="Ver Al Filo del Poder en Amazon">
         <img class="book-cover" src="./portada%20al%20filo%20del%20poder.jpg" alt="Portada del ebook Al Filo del Poder" />
       </a>
-      <a class="book-cta" href="/poder/">Entrar a detalles de la obra</a>
+      <a class="book-cta" href="/poder/">Ver musica incidental</a>
     </section>
 
     <section class="social" aria-label="Instagram de Portento">
