--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
       <a class="book-cta" href="/poder/">Ver musica incidental</a>
     </section>
 
-    <section class="forotp" aria-label="Foro TP">
-      <h2>Foro TP</h2>
-      <p>Explora el album destacado del Foro TP en Spotify desde una vista dedicada para escuchar y compartir facilmente.</p>
-      <a class="forotp-cta" href="/forotp">Ir a Foro TP</a>
+    <section class="forotp" aria-label="Presentacion en Foro Total Play">
+      <h2>Presentacion en Foro Total Play. Plaza Antara, Polanco. Ciudad de Mexico</h2>
+      <p>Presentacion en Foro Total Play. Plaza Antara, Polanco. Ciudad de Mexico.</p>
+      <a class="forotp-cta" href="/forotp">Ver presentacion</a>
     </section>
 
     <section class="social" aria-label="Instagram de Portento">
