Mover Spotify a seccion de presentacion y enlazar Ver detalles

--- a/index.html
+++ b/index.html
@@ -189,14 +189,6 @@
       allowfullscreen>
     </iframe>
 
-    <iframe
-      class="spotify-frame"
-      src="https://open.spotify.com/embed/artist/0p0NNmXeyiUoxsalvITKgc?utm_source=generator"
-      title="Portento Spotify"
-      loading="lazy"
-      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-    </iframe>
-
     <section class="book" aria-label="Al Filo del Poder">
       <h2>Al Filo del Poder</h2>
       <p>Musica incidental original de la obra.</p>
@@ -209,7 +201,14 @@
     <section class="forotp" aria-label="Presentacion en Foro Total Play">
       <h2>Presentacion en Foro Total Play. Plaza Antara, Polanco. Ciudad de Mexico</h2>
       <p>Presentacion en Foro Total Play. Plaza Antara, Polanco. Ciudad de Mexico.</p>
-      <a class="forotp-cta" href="/forotp">Ver presentacion</a>
+      <iframe
+        class="spotify-frame"
+        src="https://open.spotify.com/embed/album/3wTmN3YUsKG3FZoER9sJzr?utm_source=generator"
+        title="Presentacion en Foro Total Play"
+        loading="lazy"
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+      </iframe>
+      <a class="forotp-cta" href="https://youtu.be/Y9j32pUrOgQ?si=6hZU0dfBtTChEiys" target="_blank" rel="noopener noreferrer">Ver detalles</a>
     </section>
 
     <section class="social" aria-label="Instagram de Portento">
