Reemplazar texto repetido por Love Choose US

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
     <section class="forotp" aria-label="Presentacion en Foro Total Play">
       <h2>Presentacion en Foro Total Play. Plaza Antara, Polanco. Ciudad de Mexico</h2>
-      <p>Presentacion en Foro Total Play. Plaza Antara, Polanco. Ciudad de Mexico.</p>
+      <p>Love Choose US</p>
       <iframe
         class="spotify-frame"
         src="https://open.spotify.com/embed/album/3wTmN3YUsKG3FZoER9sJzr?utm_source=generator"
