--- a/forotp/index.html
+++ b/forotp/index.html
@@ -14,12 +14,37 @@
     .wrapper {
       max-width: 900px;
       margin: 0 auto;
+      display: grid;
+      gap: 16px;
+    }
+    .video-frame {
+      width: 100%;
+      aspect-ratio: 16 / 9;
+      border: 0;
+      border-radius: 12px;
+      background: #000;
     }
   </style>
 </head>
 <body>
   <div class="wrapper">
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3wTmN3YUsKG3FZoER9sJzr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe
+      class="video-frame"
+      src="https://www.youtube.com/embed/Y9j32pUrOgQ"
+      title="Video Foro Total Play 1"
+      loading="lazy"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen>
+    </iframe>
+    <iframe
+      class="video-frame"
+      src="https://www.youtube.com/embed/QKOHfMIWkkQ"
+      title="Video Foro Total Play 2"
+      loading="lazy"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen>
+    </iframe>
   </div>
 </body>
 </html>
