Actualizar CTA a Ver otros conciertos

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         loading="lazy"
         allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
       </iframe>
-      <a class="forotp-cta" href="/forotp">Ver detalles</a>
+      <a class="forotp-cta" href="/forotp">Ver otros conciertos</a>
     </section>
 
     <section class="social" aria-label="Instagram de Portento">
