--- a/forotp/index.html
+++ b/forotp/index.html
@@ -19,7 +19,8 @@
     }
     .video-frame {
       width: 100%;
-      aspect-ratio: 16 / 9;
+      min-height: 240px;
+      height: clamp(240px, 56.25vw, 506px);
       border: 0;
       border-radius: 12px;
       background: #000;
@@ -31,7 +32,7 @@
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3wTmN3YUsKG3FZoER9sJzr?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <iframe
       class="video-frame"
-      src="https://www.youtube.com/embed/Y9j32pUrOgQ"
+      src="https://www.youtube-nocookie.com/embed/Y9j32pUrOgQ"
       title="Video Foro Total Play 1"
       loading="lazy"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -39,8 +40,16 @@
     </iframe>
     <iframe
       class="video-frame"
-      src="https://www.youtube.com/embed/QKOHfMIWkkQ"
+      src="https://www.youtube-nocookie.com/embed/QKOHfMIWkkQ"
       title="Video Foro Total Play 2"
+      loading="lazy"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      allowfullscreen>
+    </iframe>
+    <iframe
+      class="video-frame"
+      src="https://www.youtube-nocookie.com/embed/0FGbsJx9AK8"
+      title="Video Foro Total Play 3"
       loading="lazy"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
       allowfullscreen>
