Restaurar seccion principal de Spotify en home

--- a/index.html
+++ b/index.html
@@ -189,6 +189,14 @@
       allowfullscreen>
     </iframe>
 
+    <iframe
+      class="spotify-frame"
+      src="https://open.spotify.com/embed/artist/0p0NNmXeyiUoxsalvITKgc?utm_source=generator"
+      title="Portento Spotify"
+      loading="lazy"
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
+    </iframe>
+
     <section class="book" aria-label="Al Filo del Poder">
       <h2>Al Filo del Poder</h2>
       <p>Musica incidental original de la obra.</p>
